fixed header z-index

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
 
 header {
   position: fixed;
+  z-index: 1;
   top: 0;
   width: 100%;
   background-color: gray;
